# ConnectPyse-Manage

./: .gitignore  README.md  pyproject.toml
docs/: agents.md  api-reference.md
src/connectwise/: __init__.py  client.py  defaults.py  exceptions.py  utils.py
src/connectwise/mixins/: __init__.py  boards_mixin.py  companies_mixin.py  configuration_mixin.py  lookup_mixin.py  ticket_mixin.py
src/connectwise/models/: __init__.py  board.py  board_item.py  board_status.py  board_subtype.py  board_type.py  company.py  company_status.py  configuration.py  note.py  priority.py  source.py  ticket.py
